--- a/appoint_pro/.gitignore
+++ b/appoint_pro/.gitignore
@@ -1,41 +1,52 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Then, whitelist directories we want to track
+!src/
+!prisma/
+!public/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Then, whitelist specific file types and configurations we want to track
+!*.ts
+!*.tsx
+!*.js
+!*.jsx
+!*.json
+!*.css
+!*.md
+!.eslintrc.json
+!tailwind.config.ts
+!postcss.config.mjs
+!next.config.mjs
+!tsconfig.json
+!components.json
+!README.md
+!README-*.md
+!.env.example
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
+# But still ignore these specific files and directories
+node_modules/
+.next/
+out/
+build/
 .env*
-
-# vercel
+!.env.example
 .vercel
-
-# typescript
 *.tsbuildinfo
 next-env.d.ts
+stripe-price-ids.txt
+.stripe
+prisma/dev.db
+prisma/dev.db-journal
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.json
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+*.log
+*.bak
+*.tmp
+*.temp
+.cache/
+migration.sql
+
