--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -67,7 +67,8 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "eslint-plugin-translations": "file:src/eslint-plugin-translations"
   },
   "resolutions": {
     "react": "18.2.0",
