--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -19,13 +19,17 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.12",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stripe/stripe-js": "^7.0.0",
     "bcrypt": "^5.1.1",
@@ -42,7 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
-    "sonner": "^1.4.3",
+    "sonner": "^1.7.4",
     "stripe": "^18.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -62,13 +66,13 @@
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.2.2",
+    "eslint-plugin-translations": "file:src/eslint-plugin-translations",
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3",
-    "eslint-plugin-translations": "file:src/eslint-plugin-translations"
+    "typescript": "^5.3.3"
   },
   "resolutions": {
     "react": "18.2.0",
