Linting errors fixes and build

--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -37,13 +37,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.344.0",
     "next": "15.2.2",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
@@ -67,6 +68,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-translations": "file:src/eslint-plugin-translations",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
