--- a/appoint_pro/.eslintrc.json
+++ b/appoint_pro/.eslintrc.json
@@ -7,7 +7,7 @@
     "parser": "@typescript-eslint/parser",
     "plugins": [
         "@typescript-eslint",
-        "translations"
+        "unused-imports"
     ],
     "parserOptions": {
         "ecmaVersion": 2021,
@@ -17,15 +17,27 @@
         }
     },
     "rules": {
-        "translations/require-translation-key": "error",
-        "translations/valid-translation-key": "error"
+        "@typescript-eslint/no-unused-vars": "off",
+        "unused-imports/no-unused-imports": "error",
+        "unused-imports/no-unused-vars": [
+            "warn",
+            {
+                "vars": "all",
+                "varsIgnorePattern": "^_",
+                "args": "after-used",
+                "argsIgnorePattern": "^_"
+            }
+        ],
+        "@typescript-eslint/consistent-type-imports": [
+            "error",
+            {
+                "prefer": "type-imports"
+            }
+        ]
     },
     "settings": {
         "react": {
             "version": "detect"
-        },
-        "translations": {
-            "localesPath": "./src/locales"
         }
     }
 }
