--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
+    "@faker-js/faker": "^9.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.25",
@@ -71,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
     "autoprefixer": "^10.4.18",
+    "cypress": "^14.3.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-translations": "file:src/eslint-plugin-translations",
