--- a/appoint_pro/.gitignore
+++ b/appoint_pro/.gitignore
@@ -51,3 +51,25 @@ Desktop.ini
 migration.sql
 .vscode
 
+# Added by Claude Task Master
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+# Environment variables
+.env
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+.DS_Store
+# Task files
+tasks.json
+tasks/ 
