--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stripe/stripe-js": "^7.0.0",
     "bcrypt": "^5.1.1",
@@ -43,15 +44,23 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "connect-redis": "^8.0.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
+    "express-session": "^1.18.1",
+    "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.344.0",
     "next": "15.2.2",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "redis": "^4.7.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
     "stripe": "^18.0.0",
@@ -66,6 +75,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.25",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "@types/uuid": "^10.0.0",
