--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: ['main']
   push:
-    branches: ['**', '!main']
+    branches: ['**']
 
 jobs:
   build-and-test:
@@ -27,25 +27,27 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: 'appoint_pro/package-lock.json'
 
       - name: Install Dependencies
-        run: npm ci
+        run: cd appoint_pro && npm ci
 
       - name: Run Linter
-        run: npm run lint
+        run: cd appoint_pro && npm run lint
 
       - name: Generate Prisma Client
-        run: npx prisma generate
+        run: cd appoint_pro && npx prisma generate
 
       - name: Build Next.js App
-        run: npm run build
+        run: cd appoint_pro && npm run build
 
       - name: Run Component Tests
-        run: npm run component:headless
+        run: cd appoint_pro && npm run component:headless
 
       - name: Setup and Run Cypress E2E Tests
         uses: cypress-io/github-action@v6
         with:
+          working-directory: appoint_pro
           build: npm run build
           start: npm start
           wait-on: 'http://localhost:3000'
