--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -46,12 +46,12 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.344.0",
-    "next": "15.2.3",
+    "next": "^15.3.1",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
+    "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.1.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
     "stripe": "^18.0.0",
