fixed build and linting

--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -61,29 +61,30 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.1",
     "@faker-js/faker": "^9.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.11.25",
-    "@types/react": "18.2.64",
-    "@types/react-dom": "18.2.21",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
-    "autoprefixer": "^10.4.18",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "autoprefixer": "^10.0.1",
     "cypress": "^14.3.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.2.3",
-    "eslint-plugin-translations": "file:src/eslint-plugin-translations",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "postcss": "^8.4.35",
-    "prisma": "^5.10.2",
+    "eslint": "^9.1.0",
+    "eslint-config-next": "15.3.1",
+    "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.11.0",
     "start-server-and-test": "^2.0.11",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5"
   },
   "resolutions": {
     "react": "^19.1.0",
