--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -71,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
     "autoprefixer": "^10.4.18",
+    "cypress": "^14.3.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-translations": "file:src/eslint-plugin-translations",
