--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -8,10 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "db:migrate": "npx prisma migrate dev",
-    "db:studio": "npx prisma studio",
-    "db:reset": "prisma migrate reset && prisma migrate dev",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset --force && prisma migrate dev",
+    "db:seed": "prisma db seed",
     "db:seed-plans": "ts-node -r tsconfig-paths/register src/scripts/seed-stripe-plans.ts",
+    "db:status": "prisma db pull --print",
+    "db:setup": "npm run db:deploy && npm run db:seed && npm run db:seed-plans",
     "stripe:sync": "ts-node -r tsconfig-paths/register src/scripts/sync-subscriptions.ts",
     "cypress:open": "cypress open",
     "e2e": "start-server-and-test \"npm run dev\" http://localhost:3000 \"cypress open --e2e\"",
