--- a/appoint_pro/tsconfig.json
+++ b/appoint_pro/tsconfig.json
@@ -33,7 +33,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.js"
+    "next.config.js",
+    "src/scripts/seed-stripe-plans.ts"
   ],
   "exclude": [
     "node_modules"
