--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,11 +12,11 @@ jobs:
     
     env:
       DATABASE_URL: "file:./dev.db"
-      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'supersecretkey' }}
+      NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
       NEXTAUTH_URL: http://localhost:3000
-      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY || 'sk_test_example' }}
-      STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET || 'whsec_example' }}
-      NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY || 'pk_test_example' }}
+      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY}}
+      STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
+      NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY }}
 
     steps:
       - name: Checkout Repository
