--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -22,7 +22,7 @@
     "cypress:open": "cypress open",
     "e2e": "start-server-and-test \"npm run dev\" http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test \"npm run dev\" http://localhost:3000 \"cypress run --e2e\"",
-    "postinstall": "npm run db:deploy && npm run db:seed && npm run db:seed-plans"
+    "postinstall": "npm run db:deploy"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
