--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "prisma generate && next build",
+    "build": "prisma:generate && next build",
     "start": "next start",
     "lint": "eslint .",
     "db:migrate": "prisma migrate dev",
@@ -22,6 +22,7 @@
     "cypress:open": "cypress open",
     "e2e": "start-server-and-test \"npm run dev\" http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test \"npm run dev\" http://localhost:3000 \"cypress run --e2e\"",
+    "prisma:generate": "prisma generate --schema=./packages/db/schema.prisma",
     "postinstall": "npm run db:deploy"
   },
   "prisma": {
