--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "prisma generate --schema=./packages/db/schema.prisma && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint .",
     "db:migrate": "prisma migrate dev",
