--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.12",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -52,12 +53,15 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.344.0",
+    "moment": "^2.30.1",
     "next": "^15.3.1",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.18.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.1",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
     "stripe": "^18.0.0",
@@ -65,7 +69,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.3",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -76,6 +80,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
