--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -34,7 +34,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.12",
+    "@aws-sdk/client-s3": "^3.810.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@heroui/date-input": "^2.3.18",
+    "@heroui/system": "^2.4.15",
+    "@heroui/theme": "^2.4.15",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.3.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -51,13 +59,16 @@
     "@react-email/components": "0.0.38",
     "@stripe/stripe-js": "^7.0.0",
     "@supabase/supabase-js": "^2.49.4",
+    "antd": "^5.25.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.344.0",
     "moment": "^2.30.1",
     "next": "^15.3.1",
