--- a/appoint_pro/package.json
+++ b/appoint_pro/package.json
@@ -43,6 +43,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.3.1",
+    "@next/mdx": "^15.3.3",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -61,6 +62,7 @@
     "@react-email/components": "0.0.38",
     "@stripe/stripe-js": "^7.0.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/typography": "^0.5.16",
     "antd": "^5.25.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -72,16 +74,20 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.344.0",
+    "mdast-util-to-string": "^4.0.0",
     "moment": "^2.30.1",
     "next": "^15.3.1",
     "next-auth": "^5.0.0-beta.15",
     "next-intl": "^4.1.0",
+    "next-mdx-remote-client": "^2.1.2",
     "next-themes": "^0.2.1",
     "react": "19.1.0",
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.56.1",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
     "resend": "^4.5.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
@@ -89,6 +95,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.3",
+    "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.24.3"
   },
